...
    var url = "${Url.url_prefix}/getSuggestJobs?userId=" + userId.toString() + "&cnt=" + Cnt.countForSuggest.count.toString();
    var response = await http.post(Uri.encodeFull(url), headers: {
      "Accept": "application/json"
    });
    final data = json.decode(response.body);
    if(!firstFetch){
      if(array[0]['title'] == data[0]['title']){
        firstFetch = true;
        isSuggestEnd = true;
        Cnt.countForSuggest.count = -Cnt.countForSuggest.count;
        fetchPost();
        return;
      }
...
      child: Container(
        child: Wrap(
//          mainAxisAlignment: MainAxisAlignment.start,
//          crossAxisAlignment: CrossAxisAlignment.end,
          children: <Widget>[
            GestureDetector(
              key: Key('suggestOne'),
              onTap: (){
                Navigator.push(context, MaterialPageRoute(builder: (context) =>ProjDetails(RecA[0][2])));
              },
             child:  _card(
                  primary: Colors.white,
//                  backWidget:
...
              child:Row(
                mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                children: <Widget>[
                  Container(
                    height: 100,
                    child: MaterialButton(
                      key: Key('hirebutton'),
                      color: Colors.blue,
                      textColor: Colors.white,
                      shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(18)),
                      child: Text(
                        '我要雇人',
                        key: Key('hiretext'),
                        style: TextStyle(fontSize: 26),
                      ),
                      onPressed: () {
                       isLog ? Navigator.push(context, MaterialPageRoute(builder: (context) => PublishPage())) : Navigator.pushNamed(context, "/login");
                      },
                    ),
                  ),
                  Container(
                    height: 100,
                    child: MaterialButton(
                      key: Key('workbutton'),
                      color: Colors.blue,
                      textColor: Colors.white,
                      shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(18)),
                      child: Text(
                        '我要工作',
                        key: Key('worktext'),
                        style: TextStyle(fontSize: 26),
                      ),
                      onPressed: () {
                        Navigator.push(context, MaterialPageRoute(builder: (context) => JobListPage()));
                      },
                    ),
...
