...

    return Scaffold(
        resizeToAvoidBottomInset: false,
        appBar: AppBar(
          title: Text(
            "发布项目",
            key: Key('publishTitle'),
            style: TextStyle(
                fontSize: 20,
                fontWeight: FontWeight.w400
            ),
          ),
          centerTitle: true,
...
            key: formKey,
            child: new Column(
              children: <Widget>[
                Row(children: <Widget>[
                  new Expanded(
                      child: new TextFormField(
                    key: Key('newJobTitle'),
                    decoration: new InputDecoration(labelText: "Title"),
                    validator: (val) =>
                        val.length < 2 ? 'Title too short' : null,
                    onSaved: (val) => _title = val,
                  )),
                  new Text('  '),
...
                        print(err);
                      });
                    },
                  )
                ]),
                new TextFormField(
                  key: Key('newJobDescription'),
                  decoration: new InputDecoration(labelText: "Description"),
                  keyboardType: TextInputType.multiline,
                  maxLines: null,
                  //不限制行数
                  validator: (val) =>
                      val.length < 20 ? 'Description too short' : null,
                  onSaved: (val) => _description = val,
                ),
                new Padding(
                  padding: const EdgeInsets.only(top: 20.0),
                ),
                new RaisedButton(
                  key: Key('publish'),
                  child: new Text(
                    "Submit",
                    style: new TextStyle(color: Colors.white),
                  ),
                  color: Colors.blue,
                  onPressed: onSubmit,
...
